src/components/EventPage/EventPage.scss
/* body {
    margin: 0px 25px;
} */


.css-15tk2fu-MuiGrid-root{
    display: inline-flex;
    flex-flow: row;
    flex-direction: row;
    width: 18em;
}

.stackTypeDisplay{
    background: black;
    color: white;
    border-radius: 50%;
    width: 49px;
    padding: 15px 0;
    height: auto;
    text-align: center;
    font-weight: 700;
    font-size: 12px;
    align-items: right;
    display: inline-block;
    position: relative;
    left: 175px;
    bottom: 70px;
}

.stackTypeDualDisplay{
    background: black;
    color: white;
    border-radius: 50%;
    width: 49px;
    padding: 15px 0;
    height: auto;
    text-align: center;
    font-weight: 700;
    font-size: 12px;
    display: inline-block;
    align-items: right;
    position: relative;
    left: 120px;
    bottom: 70px;
}

#createNewEventDiv {
    border: 3px dashed white;
    border-radius: 8px;
}

.eventpagerow {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 20px;
    flex: .8;
    flex: none;
}

.col1 {
    // flex: .8;
}

.col2 {
    // padding-top: 200px;
    flex-grow: 1;
    text-align: center;
}

/* --------------Modal--------------- */

.createNewEventModal{
    width: 40%;
  }
  
.css-79ws1d-MuiModal-root{
justify-content: center;
align-items: center;
width: 700px;
}

.cardStyling {
    bottom: 75px;
    top: -100px;
    position: relative;
}

.eventContainer h3 {
    text-transform: uppercase;
}

.eventItemDateTime{
    display: flex;
    flex-direction: row;
}

.eventItemType span{
    display: inline-block;
    flex-direction: row;
    justify-content: space-around;
}

.dateStyling {
    margin-top: 0px;
    font-size: 15px;
}

.timeStyling {
    margin-top: -10px;
    font-size: 12px;
}

#createNewEventTitle {
    display: inline;
    vertical-align: middle;
    line-height: normal;
}

.eventContainer {
    width: 67em;
    flex-flow: row;
    flex-direction: row;
    gap: 10px;
    display: inline-flex;
    align-items: center; 
    overflow-x: scroll;
    scroll-behavior: smooth;
}

.eventItem {
    /* align-items: center; */
    justify-content: space-around;
    border: 3px solid transparent;
    height: 250px;
    width: 14em;
    flex: none;
    border-radius: 8px;
    background-color: white;
    padding-left: 10px;
    padding-right: 10px;
} 

.eventTitle{
    padding-top: 15px;
}

.eventDescription{
    text-transform: capitalize;
}

.titleCol1 {
    text-align: left;
    // display: inline-block;
    font-size: 14px;
    text-transform: capitalize;
    
}

.titleCol2 {
    text-align: right;
    // display: inline-block;
    // padding-left: 782px;
}

.titleDiv {
    display: flex;
    width: 100%;
    justify-content: space-between;
    padding-top: 30px;
}

